--- a/views/product.html
+++ b/views/product.html
@@ -211,8 +211,7 @@
                             </div>
                             <button
                               class="grid-item-sidebar-filter-content-item-dropdown-body-btn"
-                              ng-model="apply"
-                              onchange="system()"
+                              onclick="openfilterBtn()"
                             >
                               Apply
                             </button>
@@ -309,32 +308,17 @@
                                 />
                               </div>
                             </a>
-                            <div
-                              class="product-cart-color"
-                              style="min-height: 20px"
-                            >
-                              <label for="" class="product-cart-color-black">
-                                <span></span>
-                              </label>
-                              <label for="" class="product-cart-color-white">
-                                <span></span>
-                              </label>
-                              <label for="" class="product-cart-color-brown">
-                                <span></span>
-                              </label>
-                              <label for="" class="product-cart-color-grey">
-                                <span></span>
-                              </label>
-                            </div>
+
+                             
                             <div
                               class="product-cart-info"
                               style="min-height: 112px"
                             >
                               <p style="display: none"></p>
-                              <p class="product-cart-info-brand"></p>
-                              <h3 class="product-cart-info-title"></h3>
+                              <p class="product-cart-info-brand">pham minh khoa</p>
+                              <h3 class="product-cart-info-title">fffddf</h3>
                               <p class="product-cart-info-price">
-                                <span style="font-size: 13px">$</span>
+                                <span style="font-size: 13px">100S</span>
                               </p>
                             </div>
                           </div>
@@ -378,7 +362,7 @@
       <div class="relative-images">
         <img src="../assets/img/garden.jpg" alt="" class="relative-img" />
       </div>
-      <div class="relative-details">
+      <div class="relative-details"> 
         <div>
           <div class="relative-brand">yer</div>
           <div class="relative-product-name">gdsfg</div>
