--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -817,8 +817,8 @@ footer ul a:hover {
   position: absolute;
   border-radius: 50%;
   overflow: hidden;
-  bottom: 50px;
-  left: 200px;
+  top: 10px;
+  right: 20px;
 }
 
 /* search */
@@ -1368,7 +1368,279 @@ label.product-cart-color-white{
 /* responsive */
 /* mobile */
 @media only screen and (max-width:739px) {
+  /* header-top */
+  .header-top{
+    height: 60px;
+  }
+  .langues{
+    display: none;
+  }
+  /* header-bottom */
+  .header-action-list .header-action-item {
+  display: none;
+}
+
+/* navigation  */
+nav .nav-list{
+  display:none;
+}
+/* search */
+.form-search-header{
+  margin-left: -30px;
+}
+/* menu button */
+.menuBtn{
+  display: block !important;
+  padding: 10px;
+   border-radius: 5px;
+   border:none;
+   outline: none;
+   background: transparent;
+}
+.menuBtn i{
+  font-size: 30px;
+  font-weight: 700;
+}
+.menuBtn:hover{
+  transform:scale(1.1) ;
+}
+/* slider   */
+
+.slider-container {
+    height: 390px;
+    background: #767676;
+    color: #ffffff;
+    margin-top: 130px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+.thumbnail-list .wrapper .thumbnail.zoom {
+    width: 868px;
+    height: 580px;
+    transform: translate(-632px ,-22px);
+}
+.thumbnail-list .wrapper .thumbnail {
+  height: 0;
+  width: 0;
+}
+.navigation .next-button {
+    width: 90px;
+    height: 50px;
+    margin-left: -105px;
+}
+.slider-container .navigation {
+  margin-bottom: -14px;
+}
+.ordinal-number h2 {
+  font-size: 2.5rem;
+}
+.slider-container .introduce {
+    width: 400px;
+}
+.introduce .place {
+    font-family: "open-san", sans-serif;
+    font-size: 40px;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 1.1;
+    letter-spacing: 1px;
+    
+}
+/* signature */
+.signature-plant-container{
+  padding: 0;
+  margin-top: 10px;
+}
+
+.signature-plant-container .signature-plant-title {
+  font-size: 13px;
+  font-weight: 700;
+}
+.signature-plant-container .signature-plant-wrapper-list {
+  gap : 0;
+}
+.signature-plant-container .signature-plant-wrapper-list .signature-plant-item .signature-plant-img {
+  height: 80px;
+  width: 80px;
+}
+
+
+.signature-plant-container .signature-plant-title {
+    font-size: 10px;
+  font-weight: 600;
+}
+.signature-plant-content p{
+   font-size: 7px;
+}
+.signature-plant-container .signature-plant-wrapper-list .signature-plant-item:before {
+    top: 54px;
+    right: 42px;
+    background: transparent;
+    height: 15px;
+    width: 15px;
   
+}
+.signature-plant-container .signature-plant-wrapper-list .signature-plant-item:hover:before {
+  transform: scale(10);
+  background:var(--agriculture-one);
+}
+.signature-plant-container .signature-plant-wrapper-list .signature-plant-item:hover img {
+      transform: translateY(-10px) scale(1.1);
+      filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.9));
+}
+
+.plat-tree-container {
+  height: 200px;
+}
+
+.plat-tree-container .plant-tree-center{
+  height: 100px;
+  width: 200px;
+}
+.plat-tree-container .plant-tree-circle:nth-child(2){
+  width: 70px;
+  height: 70px;
+  left : 150px;
+  bottom: -8px;
+}
+.plat-tree-container .plant-tree-circle:nth-child(3){
+  width: 50px;
+  height: 50px;
+}
+.plat-tree-container .plant-tree-circle:nth-child(4){
+  width: 30px;
+  height: 30px;
+}
+.plat-tree-container .plant-tree-circle:nth-child(5){
+  width: 20px;
+  height: 20px;
+}
+.plat-tree-container .plant-tree-circle:nth-child(5){
+  width: 25px;
+  height: 25px;
+  top: 30px;
+  left: 30px;
+}
+/* care tree */
+.care-title h2 {
+  font-size: 28px;
+}
+.care-container{
+  max-width: 29rem;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.care-item {
+    width: 33.33333%;
+    margin: 1rem 0;
+    padding: 0.5rem 0;
+}
+.care-item a {
+    margin-bottom: 0.55rem;
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
+}
+.care-item a img {
+    height: 15px;
+    width: 15px;
+}
+.care-item a h4 {
+    padding-left: 15px;
+    font-size: 10px;
+    font-weight: 500;
+}
+/* banner */
+.banner-container{
+  gap: 10px;
+  padding: 0 16px;
+}
+.banner-container .banner-title {
+    font-size: 18px;
+    font-weight: 600;
+    text-transform: capitalize;
+    font-family: "roboto" ,sans-serif;
+    padding: 15px 0;
+    margin-top: 30px;
+}
+.banner-container .banner-description {
+    font-size:10px;
+    font-weight: 500;
+    margin-top: -10px;
+}
+.banner-container .banner-wrapper-img img {
+    width: 150px;
+    height: 100px;
+}
+.banner-content-wrapper .banner-content-name {
+    font-size: 11px;
+    font-weight: 600;
+    text-transform: capitalize;
+    margin-top:50px;
+}
+.banner-content-wrapper p {
+    margin-top: 10px;
+    font-size: 8px;
+    font-weight: 500;
+    text-transform: capitalize;
+    color: #e47b4c;
+    margin-bottom: 10px;
+}
+.banner-content-wrapper {
+    width: 63px;
+}
+.shipper_back{
+bottom: 4px;
+}
+.shipper {
+bottom: -23px;
+}
+.shipper_back,
+.shipper {
+  height: 60px;
+  width: 60px;
+}
+.banner-bottom{
+  height: 19px;
+  padding-top: 5px;
+}
+article{
+  padding-left: 10px;
+}
+/* animation ship */
+@keyframes shipper_left {
+  0%{
+  
+    transform:translateX(calc(100% + 500px));
+  }
+  100%{
+     transform:translateX(calc(-100% - 500px));
+  }
+}
+
+@keyframes shipper_right {
+  0%{
+     transform:translateX(calc(-100% - 500px)) rotateY(180deg) ;
+  }
+  100%{
+    transform:translate(calc(100% + 500px)) rotateY(180deg) ;
+  }
+}
+/* search box */
+.form-search-header{
+  position: relative;
+  height: 30px;
+  width: 190px;
+  padding-left: 20px;
+  
+}
+.form-search-header .input-search-header{
+  padding-left: 20px;
+  width: 100%;
+  height: 100%;
+  caret-color: #424040;
+  outline: none;
+}
 }
 /* tablet */
 @media only screen and (min-width:740px) and (max-width:1023px){
@@ -1394,6 +1666,7 @@ label.product-cart-color-white{
   width: auto;
   margin-left: 16px;
   margin-right: 16px;
+  justify-content: center;
 }
 
 /* signature  */
