--- a/assets/css/substyle.css
+++ b/assets/css/substyle.css
@@ -7,7 +7,7 @@
   /* border: 1px solid #000; */
 }
 body {
-  height: 2000px;
+  /* height: 2000px; */
   /* border: 1px solid #000; */
 }
 #header2 {
