--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,10 @@
     --health-four: #01a3a6;
     --health-five: #045f72;
     --technology-one: #cef1ff;
-    --technology-one: #70dbff;
-    --technology-one: #01abfd;
-    --technology-one: #00587d;
-    --technology-one: #003141;
+    --technology-two: #70dbff;
+    --technology-three: #01abfd;
+    --technology-four: #00587d;
+    --technology-five: #003141;
     --agriculture-one:#abcc8b;
     --agriculture-two:#90c477;
     --agriculture-three:#75a65f;
@@ -83,6 +83,7 @@
     margin: 0 auto;
     padding: 0 10px;
   }
+
 a {
   color:#000;
 }
@@ -392,7 +393,7 @@ input[type=search]:focus {
 
 .ordinal-number h2{
     font-family: 'roboto' , sans-serif;
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     line-height: 1;
     font-weight: 400;
     transform: translateY(200%);
@@ -1389,8 +1390,11 @@ label.product-cart-color-white{
 /* responsive */
 /* mobile */
 @media only screen and (max-width:739px) {
+  .banner-item{
+    width: 95px;
+  }
   article{
-  padding-left: 27px !important ;
+  padding-left: 12px !important ;
 }
   /* logo */
   .logo img {
@@ -1715,9 +1719,25 @@ input[type=search]:focus {
   left: 420px;
   top: 3px;
 }
+.container-about{
+  display: flex;
+  flex-direction: column-reverse;
+  text-align: center;
+}
+.text-about{
+  width: 100% !important;
+}
+.image-about{
+  width: 100% !important;
+  border-radius: 20px !important;
+  overflow: hidden;
+}
 }
 /* tablet */
 @media only screen and (min-width:740px) and (max-width:1023px){
+  .banner-item{
+    width: 140px;
+  }
   /* header action */
 .header-action-list .header-action-item .header-action-title{
   display: none;
@@ -1827,7 +1847,7 @@ input[type=search]:focus {
 
 }
 .footer-item{
-  margin:  0 100px;
+  margin:  0;
 }
 /* search-box */
 .form-search-header{
@@ -1903,3 +1923,514 @@ article{
 
 
 
+.social-header-list li a{
+  color:var(--agriculture-five);
+}
+
+
+
+
+
+/*feedback*/
+.container_feedback {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 20px;
+
+}
+
+@keyframes form_slideIn {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes form_slideIn_right {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+    }
+}
+
+.feedback-form h1 {
+  text-align: center;
+}
+
+.feedback-form {
+  max-width: 400px;
+  width: 100%;
+  padding: 40px;
+  border: 1px solid;
+  border-radius: 10px;
+  background: transparent;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 0 10px;
+  animation-duration: 1.1s;
+  animation-name: form_slideIn;
+}
+
+.feedback-form label {
+  display: block;
+}
+
+.feedback-form span {
+  display: block;
+  background: transparent;
+  margin-bottom: 10px;
+  color: red;
+}
+
+.feedback-form input[type="text"],
+.feedback-form textarea {
+  width: 100%;
+  padding: 5px;
+  border-radius: 4px;
+  background-color: white;
+}
+
+.feedback-form textarea {
+  height: 100px;
+  resize: none;
+}
+
+
+/*feedback button */
+.btn_fb {
+  height: 4em;
+  width: 12em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent !important;
+  border: 0px solid black;
+  padding-left: 50%;
+}
+
+.wrapper_fb {
+  height: 2em;
+  width: 8em;
+  position: relative;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text_fb {
+  font-size: 17px;
+  z-index: 1;
+  color: #000;
+  padding: 4px 12px;
+  border-radius: 4px;
+  background: rgba(255, 255, 255, 0.7);
+  transition: all 0.5s ease;
+}
+
+.flower {
+  display: grid;
+  grid-template-columns: 1em 1em;
+  position: absolute;
+  transition: grid-template-columns 0.8s ease;
+}
+
+.flower1 {
+  top: -12px;
+  left: -13px;
+  transform: rotate(5deg);
+}
+
+.flower2 {
+  bottom: -5px;
+  left: 8px;
+  transform: rotate(35deg);
+}
+
+.flower3 {
+  bottom: -15px;
+  transform: rotate(0deg);
+}
+
+.flower4 {
+  top: -14px;
+  transform: rotate(15deg);
+}
+
+.flower5 {
+  right: 11px;
+  top: -3px;
+  transform: rotate(25deg);
+}
+
+.flower6 {
+  right: -15px;
+  bottom: -15px;
+  transform: rotate(30deg);
+}
+
+.petal {
+  height: 1em;
+  width: 1em;
+  border-radius: 40% 70% / 7% 90%;
+  background: linear-gradient(#69db69, #bce9d7);
+  border: 0.5px solid #96ecae;
+  z-index: 0;
+  transition: width 0.8s ease, height 0.8s ease;
+}
+
+.two {
+  transform: rotate(90deg);
+}
+
+.three {
+  transform: rotate(270deg);
+}
+
+.four {
+  transform: rotate(180deg);
+}
+
+.btn_fb:hover .petal {
+  background: linear-gradient(#21a721, #7adfb6);
+  border: 0.5px solid rgb(77, 164, 102);
+}
+
+.btn_fb:hover .flower {
+  grid-template-columns: 1.5em 1.5em;
+}
+
+.btn_fb:hover .flower .petal {
+  width: 1.5em;
+  height: 1.5em;
+}
+
+.btn_fb:hover .text_fb {
+  background: rgba(255, 255, 255, 0.4);
+}
+
+.btn_fb:hover div.flower1 {
+  animation: 15s linear 0s normal none infinite running flower1;
+}
+
+@keyframes flower1 {
+  0% {
+    transform: rotate(5deg);
+  }
+
+  100% {
+    transform: rotate(365deg);
+  }
+}
+
+.btn_fb:hover div.flower2 {
+  animation: 13s linear 1s normal none infinite running flower2;
+}
+
+@keyframes flower2 {
+  0% {
+    transform: rotate(35deg);
+  }
+
+  100% {
+    transform: rotate(-325deg);
+  }
+}
+
+.btn_fb:hover div.flower3 {
+  animation: 16s linear 1s normal none infinite running flower3;
+}
+
+@keyframes flower3 {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.btn_fb:hover div.flower4 {
+  animation: 17s linear 1s normal none infinite running flower4;
+}
+
+@keyframes flower4 {
+  0% {
+    transform: rotate(15deg);
+  }
+
+  100% {
+    transform: rotate(375deg);
+  }
+}
+
+.btn_fb:hover div.flower5 {
+  animation: 20s linear 1s normal none infinite running flower5;
+}
+
+@keyframes flower5 {
+  0% {
+    transform: rotate(25deg);
+  }
+
+  100% {
+    transform: rotate(-335deg);
+  }
+}
+
+.btn_fb:hover div.flower6 {
+  animation: 15s linear 1s normal none infinite running flower6;
+}
+
+@keyframes flower6 {
+  0% {
+    transform: rotate(30deg);
+  }
+
+  100% {
+    transform: rotate(390deg);
+  }
+}
+
+/*feedback input*/
+.group_fb {
+  position: relative;
+}
+
+.input_fb {
+  font-size: 16px;
+  padding: 10px 10px 10px 10px;
+  display: block;
+  width: 200px;
+  border: none;
+  border-bottom: 1px solid #515151;
+  background: transparent;
+}
+
+.input_fb:focus {
+  outline: none;
+}
+
+.label_fb {
+  font-size: 14px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+.input_fb:focus~label,
+.input_fb:valid~label {
+  top: -20px;
+  font-size: 14px;
+}
+
+.bar_fb {
+  position: relative;
+  display: block;
+  width: 200px;
+}
+
+.bar_fb:before,
+.bar_fb:after {
+  content: '';
+  height: 2px;
+  width: 0;
+  bottom: -5px;
+  position: absolute;
+  background: #5264ae;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+.bar_fb:before {
+  left: 50%;
+}
+
+.bar_fb:after {
+  right: 50%;
+}
+
+.input_fbinput:focus~.bar_fb:before,
+.input_fb:focus~.bar_fb:after {
+  width: 50%;
+}
+
+.highlight_fb {
+  position: absolute;
+  height: 95%;
+  width: 100%;
+  top: 5px;
+  bottom: 5px;
+  left: 5px;
+  right: 5px;
+  background-color: white;
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.input_fb:focus~.highlight_fb {
+  animation: inputhighlight_fber 0.5s ease;
+}
+
+@keyframes inputhighlight_fber {
+  from {
+    background: goldenrod;
+    border-radius: 5px;
+  }
+
+  to {
+    width: 0;
+  }
+}
+
+/* contact us */
+.container-contact {
+  background: transparent;
+  max-width: 800px;
+  margin: 0 auto;
+  margin-top: 100px;
+  padding: 20px;
+  animation-duration: 1.1s;
+  animation-name: form_slideIn;
+  background: transparent;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 10px;
+}
+
+.contact-section {
+  padding: 20px;
+  text-align: center;
+  margin-top: 10px;
+  position: relative;
+  z-index: 1;
+}
+
+.contact-section:before {
+  content: "";
+  border-radius: 10px;
+  opacity: 0.7;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  max-width: 800px;
+}
+
+.contact-section h2 {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.contact-details {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+
+}
+
+.contact-details .card {
+  background-color: var(--agriculture-one);
+  border-radius: 15px;
+  padding: 10px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  flex: 1 1 300px;
+  max-width: 300px;
+}
+
+.contact-details .card h3 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.contact-details .card p {
+  color: #666;
+}
+
+@media (max-width: 768px) {
+  .contact-details .card {
+    flex-basis: calc(50% - 20px);
+    max-width: calc(50% - 20px);
+  }
+}
+
+.contact-details .card i {
+  animation: icon_updown 1s ease infinite;
+}
+
+@keyframes icon_updown {
+  0% {
+    transform: translateY(0%);
+  }
+
+  50% {
+    transform: translateY(-30%);
+  }
+
+  100% {
+    transform: translateY(0%);
+  }
+}
+/* about us*/
+.container-about {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  background: transparent;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 10px;
+}
+
+.text-about {
+  width: 45%;
+  padding: 20px;
+  animation-duration: 1.1s;
+  animation-name: form_slideIn;
+}
+
+.image-about {
+  width: 45%;
+  padding-left: 20px;
+  text-align: center;
+  animation-duration: 1.1s;
+  animation-name: form_slideIn_right;
+  border-radius: 30px;
+  overflow: hidden;
+}
+
+.image-about img {
+  max-width: 80%;
+  width: 100%;
+  height: auto;
+}
+
+.nav-item:hover .nav-link{
+  transform: scale(1.1);
+}
